Fixed the fixed positioning for nav-bar on mobile view

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -23,6 +23,7 @@
   @media only screen and (max-width: 640px) {
     flex-flow: column wrap;
     height: auto;
+    position: static;
   }
   align-items: center;
   -webkit-box-pack: center;
