--- a/styles/view.scss
+++ b/styles/view.scss
@@ -16,8 +16,9 @@
     padding: 30px;
     width: 75%;
     @media only screen and (max-width: 640px){
-      margin-top: 250px;
-      width: 100%;
+      margin-top: 30px;
+      width: 90%;
+      padding: 0;
     }
 }
 
@@ -25,7 +26,7 @@
   -webkit-overflow-scrolling: touch;
   .about-content{
     padding: 5% 10%;
-    //text-align: justify;
+    text-align: center;
     .content-image{
       .image{
         border-radius: 50%;
